--- a/webgpu1.html
+++ b/webgpu1.html
@@ -543,7 +543,7 @@ context      = canvas.getContext('webgpu');
       Hearth Cone, </br>
       Geometry left (cross) <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./webgpu1/cone1HeartGeometry.js"></script>
+         <script src="./webgpu1/cone1HeartGeometry1.js"></script>
          <script type="text/wgsl-shader" data-gpu-type="webgpu-shader">
             struct VertexOut
             {
@@ -599,8 +599,7 @@ context      = canvas.getContext('webgpu');
             }
          </script>
       </canvas>
-   </div>
-   <br/>
+   </div><br/>
    <canvas id = "mycanvas1"  width = "310" height =  "40" class = "red"  ><script src="./webgpu1/2d.js"    ></script></canvas>
    <a href="./tutorials.html">Tutorials</a>
 </body>
