Get rid of antiques

--- a/draw.simple.1.glsl300.html
+++ b/draw.simple.1.glsl300.html
@@ -85,7 +85,7 @@
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
-         <script src="./draw.simple.1.glsl300/animate.js"></script>
+         <script src="./draw.simple.1.glsl300/animate1.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             in vec4 coordinates;
@@ -227,7 +227,7 @@
       Tip normal set to 0,0,0<br/>
       Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./draw.simple.1.glsl300/cone1Animate.js"></script>
+         <script src="./draw.simple.1.glsl300/cone1Animate1.js"></script>
          <script  type="text/glsl-shader" data-gl-type="vertex-shader">
             #version 300 es
             layout (location = 0) in vec3 vertex;
