--- a/cone.basics.html
+++ b/cone.basics.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en">
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta charset="utf-8">
    <title>webgl test</title>
    <title>webgl test</title>
    <script src="./lib/js/gl2js/glcanvas.js"></script>
