--- a/draw.simple.1.glsl300.vao.auto.html
+++ b/draw.simple.1.glsl300.vao.auto.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en">
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta charset="utf-8">
    <title>webgl test</title>
    <link rel="stylesheet" href="./lib/css/default.css">
    <script src="./lib/js/math/3dmath.js"></script>
