--- a/draw.simple.1.vao.html
+++ b/draw.simple.1.vao.html
@@ -1,4 +1,7 @@
-<html>
+<html lang="en">
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta charset="utf-8">
 <head>
    <title>webgl test</title>
    <link rel="stylesheet" href="./lib/css/default.css">
