Move meta charset to the top of head in several HTML files.

--- a/textureVideo.html
+++ b/textureVideo.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en">
 <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Texture Manual 1 a, basic</title>
    <link rel="stylesheet" href="./lib/css/default.css">
 </head>
