--- a/webCamUsing.html
+++ b/webCamUsing.html
@@ -1,5 +1,8 @@
-<html>
+<html lang="en">
 <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>WebCam using getUserMedia</title>
 </head>
 <body>
    <!-- canvas width="100" height="100"><video autoplay></video></canvas -->
