--- a/webgpu1.html
+++ b/webgpu1.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="en">
 <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>webgpu test</title>
    <link   rel="stylesheet" href="./lib/css/default.css"></link>
    <script src="./lib/js/math/3dmath.js"></script>
