Fix minor HTML issue with img

--- a/experiment.html
+++ b/experiment.html
@@ -17,7 +17,7 @@
 
    <!-- crossorigin="anonymous" -->
    TODO: To investigate duplication of hidden element<br/>
-   img id="imgBasic", duplicate, hiding will lead to failure:<br/><img id="imgBasic"  src="./3rdparty/texture/f-texture.png" /><br>
+   img id="imgBasic", duplicate, hiding will lead to failure:<br/><img id="imgBasic" alt="" src="./3rdparty/texture/f-texture.png" /><br>
    Tipova:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
    <a href="./tutorials.html">Tutorials</a>
 
