--- a/renderToTexture.html
+++ b/renderToTexture.html
@@ -102,7 +102,7 @@
       <source src="./3rdparty/video/flower.mp4" type="video/mp4">
    </video><br/ -->
    <!-- crossorigin="anonymous" -->
-   base:<br/><img id="imgBasic" src="./3rdparty/texture/f-texture.png" /><br/>
+   base:<br/><img id="imgBasic" alt="" src="./3rdparty/texture/f-texture.png" /><br/>
    Tipova:<br/><!-- img id="imgTipova" src="./lib/heightmap/tipova.png" / --><br/>
    <a href="./tutorials.html">Tutorials</a>
 </body>
